Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -134,17 +134,17 @@
 \setlength{\leftskip}{0.2in}
 \small
 \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
-\vspace{2pt}
+\vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
-\vspace{2pt}
+\vspace{1pt}
 \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
-\vspace{2pt}
+\vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
-% \vspace{2pt}
+% \vspace{1pt}
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
-\vspace{2pt}
+\vspace{1pt}
 \textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
-\vspace{2pt}
+\vspace{1pt}
 \textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, CloudFront, Route53 }
 \end{flushleft}
  \vspace{-16pt}
@@ -167,7 +167,6 @@
         \resumeItem{Re-engineered email information table with nested partitions and deleted \textbf{3B} promotional records from S3 and database}
         
       \resumeItemListEnd
-      \vspace{1.5pt}
 
     \resumeSubheading
       {RootQuotient}{Jun 2023 - Nov 2024}
@@ -179,7 +178,6 @@
         \resumeItem{Wrote unit \& integration test suites with a coverage of \textbf{85\%}, optimized on\textendash premise infra using Grafana's \textbf{K6} perf tests}
         \resumeItem{Configured build pipeline with static code analyzer, and release pipeline with Azure agents, deploying to Windows \textbf{IIS}}
       \resumeItemListEnd
-      \vspace{1.5pt}
 
     \resumeSubheading
       {Amazon}{May 2022 - Jul 2022}
@@ -188,8 +186,8 @@
         \resumeItem{Designed \textbf{UUID} for CGS Dashboard versioning and improved cadence from \textbf{weekly to every second} in the EMR job}
         \resumeItem{Revamped Audit Log DynamoDB to store metadata for CGS Dashboard, tracking published versions in CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
-        \resumeItem{Re-engineered \textbf{CSV View \& Diff} modules to render dashboard from \textbf{S3}, \textbf{eliminating the cost} of maintaining DDB}
-        % \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
+        \resumeItem{Reengineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
+        \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
       \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -208,7 +206,6 @@
         \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
         \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker APIs to reflect changes in backlog}
       \resumeItemListEnd
-      \vspace{1.5pt}
 
     \resumeSubheading
       {DeployX}{Jan 2024 - Mar 2024}
@@ -218,7 +215,6 @@
         \resumeItem{Provisioned an \textbf{ECS} cluster which runs \textbf{ECR} images in \textbf{Fargate}, to process the build jobs and dump the artifacts to \textbf{S3}}
         \resumeItem{Developed a \textbf{reverse proxy} for UI builds, streaming assets from \textbf{S3}, mapping subdomains to S3 keys using RDS query}
       \resumeItemListEnd
-      \vspace{1.5pt}
 
     \resumeSubheading
       {Aranpani}{Nov 2023 - Dec 2023}
