Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -159,8 +159,13 @@
        \resumeItemListStart
         \resumeItem{Redesigned \textbf{IMAP} service with event-based mail fetch, auto-retry, configurable domains, improved wait times by \textbf{16\%}}
         \resumeItem{Enhanced email compose flow, reducing errors by \textbf{30\%}, and migrated the mail view API to \textbf{ES}, cutting latency by \textbf{25\%}}
-        % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
+        % \resumeItem{Outlook mail import job: Hotfix and Permanent fixes to a production issue, Alarms/Alerts}
+        % \resumeItem{Auto Trash \& Clear Trash: Shedlock for Crons, Condition builder in jOOQ, Redis Repository, Batch Delete via Paginated query, applicable without ULID}
+        % \resumeItem{Onboarding CleverTap CEP for Backend Events: Resilinace4j, Null check before user attribute access}
+        % \resumeItem{Fmail: Dedicated IP in SES, Lambda to ECS Migration, solving concurrency problems, broken S3 connection in middle of bytes transfer}
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
+        % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
+        % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
         \resumeItem{Migrated \textbf{40 services} from CloudWatch to Last9 with \textbf{OTEL}, achieving \textbf{30\%} cost reduction and better observability}
         \resumeItem{Optimized infrastructure by decommissioning \textbf{300M index}, \textbf{2 RDS instances}, 1 EFS, right-sizing ES/RDS clusters}
         \resumeItem{Migrated email mime data from \textbf{RDS to S3}, consolidating email storage architecture and reducing RDS costs by \textbf{30\%}}
