Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -225,7 +225,7 @@
       {Aranpani}{Nov 2023 - Dec 2023}
       {Fundraiser Management System}{\href{https://kr-aashish.github.io/aranpani-api-docs}{OpenAPI Docs}}
       \resumeItemListStart
-        \resumeItem{Modeled project, donor and payment APIs with \textbf{JWT} auth, \textbf{Joi} validation, and S3 \textbf{presigned} URLs for media uploads}
+        \resumeItem{Modeled project, donor \& payment APIs with \textbf{JWT} auth, \textbf{Joi} validation, opting S3 \textbf{presigned URL} for media uploads}
         \resumeItem{Penned \textbf{Unit} and \textbf{Acceptance} test suites, maintaining a code coverage of above \textbf{90\%}, leveraging \textbf{Jest} and \textbf{SuperTest}}
         \resumeItem{Engineered resilience with \textbf{MongoDB} Replica Sets, \textbf{PM2} cluster \& APM, \textbf{Nginx} web server and \textbf{Route53} name server}
       \resumeItemListEnd
