--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -207,9 +207,9 @@
       {Jira 2.0}{Apr 2024 - Jun 2024}
       {Autonomous Project Management Suite}{\href{https://gist.github.com/kr-aashish/5d1b184bb082b29c0534861d07c2f25a}{View System Design}}
       \resumeItemListStart
-        \resumeItem{Crafted a \textbf{Lambda}, which triggers upon FRD upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
+        \resumeItem{Crafted a \textbf{Lambda}, which triggers upon \textbf{FRD} upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
         \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
-        \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker APIs to reflect changes in backlog}
+        \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker's APIs to reflect changes in backlog}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -218,7 +218,7 @@
       \resumeItemListStart
         \resumeItem{Built an API server with \textbf{RDS}, queuing build jobs and streaming logs to \textbf{Kafka} for \textbf{ClickHouse}, accessible via polling}
         \resumeItem{Provisioned an \textbf{ECS} cluster which runs \textbf{ECR} images in \textbf{Fargate}, to process the build jobs and dump the artifacts to \textbf{S3}}
-        \resumeItem{Developed a \textbf{reverse proxy} for UI builds, streaming assets from \textbf{S3}, mapping subdomains to S3 keys using RDS query}
+        \resumeItem{Developed a \textbf{reverse proxy} for UI builds, streaming assets from S3, \textbf{mapping subdomain} to S3 key with RDS query}
       \resumeItemListEnd
 
     \resumeSubheading
