Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -209,7 +209,7 @@
       \resumeItemListStart
         \resumeItem{Crafted a \textbf{Lambda}, which triggers upon \textbf{FRD} upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
         \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
-        \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker's APIs to reflect changes in backlog}
+        \resumeItem{Employed \textbf{SES} to dispatch task approval request, thereupon invoking \textbf{issue tracker's} API to reflect changes in backlog}
       \resumeItemListEnd
 
     \resumeSubheading
