Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -177,19 +177,20 @@
       {RootQuotient}{Jun 2023 - Nov 2024}
       {Software Development Engineer}{Chennai}
       \resumeItemListStart
-        \resumeItem{Created Data Service APIs to migrate Cancer Registry System, from \textbf{PL/SQL} to \textbf{TS}, leveraging \textbf{MS SQL} \& Prisma}
-        \resumeItem{Migrated .NET Web Services with RPC client \& SOAP APIs with WSDL in Node.js, consuming DLLs via FFI wrappers}
-        \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, scaled to cluster threads via \textbf{IPC}}
-        \resumeItem{Wrote unit \& integration test suites with a coverage of \textbf{85\%}, optimized on\textendash premise infra using Grafana's \textbf{K6} perf tests}
-        \resumeItem{Configured build pipeline with static code analyzer, and release pipeline with Azure agents, deploying to Windows \textbf{IIS}}
+        \resumeItem{Created APIs to migrate Cancer Registry System from \textbf{PL/SQL} \textbf{SPs} \& \textbf{Triggers} to \textbf{TS}, with \textbf{SQL Server} \& \textbf{Prisma}}
+        \resumeItem{Migrated .NET Web Services using \textbf{RPC} client \& \textbf{SOAP} APIs with WSDL in Node.js, consuming \textbf{DLLs} through \textbf{FFI}}
+        \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, scaled to cluster threads visa \textbf{IPC}}
+        \resumeItem{Wrote \textbf{unit} \& \textbf{integration} test suites with a coverage of \textbf{85\%}, optimized on-premise infra using Grafana's \textbf{K6} perf tests}
+        % \resumeItem{Configured \textbf{build pipeline} with static code analyzer, and \textbf{release pipeline} with Azure agents, deploying to Windows \textbf{IIS}}
+        \resumeItem{Configured build \& release \textbf{pipelines}, with coverage reporter, static code analyzer, deploying to \textbf{IIS} with \textbf{Azure} agents}
       \resumeItemListEnd
 
     \resumeSubheading
       {Amazon}{May 2022 - Jul 2022}
       {Software Development Engineer Intern}{Bangalore}
       \resumeItemListStart
-        \resumeItem{Designed \textbf{UUID} for CGS Dashboard versioning and improved cadence from \textbf{weekly to every second} in the EMR job}
-        \resumeItem{Revamped Audit Log DynamoDB to store metadata for CGS Dashboard, tracking published versions in CGS Version UI}
+        \resumeItem{Designed \textbf{UUID} for CGS Dashboard versioning and improved cadence from \textbf{weekly to every second}, in the EMR job}
+        \resumeItem{Revamped Audit Log \textbf{DynamoDB} to store metadata for the dashboard, tracking published versions in CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
         \resumeItem{Reengineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
         \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
