Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -157,8 +157,8 @@
       {FlashMonk}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
-        \resumeItem{Redesigned \textbf{IMAP} service with event-based mail fetch, auto-retry, configurable domains, improved wait times by \textbf{16\%}}
-        \resumeItem{Enhanced email compose flow, reducing errors by \textbf{30\%}, and migrated the mail view API to \textbf{ES}, cutting latency by \textbf{25\%}}
+        \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
+        \resumeItem{Enhanced email compose flow, reducing errors by \textbf{30\%}, and migrated the mail view API to \textbf{ES}, cutting latency by \textbf{60\%}}
         % \resumeItem{Outlook mail import job: Hotfix and Permanent fixes to a production issue, Alarms/Alerts}
         % \resumeItem{Auto Trash \& Clear Trash: Shedlock for Crons, Condition builder in jOOQ, Redis Repository, Batch Delete via Paginated query, applicable without ULID}
         % \resumeItem{Onboarding CleverTap CEP for Backend Events: Resilinace4j, Null check before user attribute access}
