--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -178,7 +178,7 @@
       {Software Development Engineer}{Chennai}
       \resumeItemListStart
         \resumeItem{Created APIs to migrate Cancer Registry System from \textbf{PL/SQL} \textbf{SPs} \& \textbf{Triggers} to \textbf{TS}, with \textbf{SQL Server} \& \textbf{Prisma}}
-        \resumeItem{Migrated .NET Web Services using \textbf{RPC} client \& \textbf{SOAP} APIs with WSDL in Node.js, consuming \textbf{DLLs} through \textbf{FFI}}
+        \resumeItem{Ported .NET Web Services using \textbf{RPC} client and \textbf{SOAP} APIs with WSDL in Node.js, consuming \textbf{DLLs} through \textbf{FFI}}
         \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, \textbf{scaled} to cluster threads via \textbf{IPC}}
         \resumeItem{Wrote \textbf{unit} \& \textbf{integration} test suites with a coverage of \textbf{85\%}, optimized on-premise infra using Grafana's \textbf{K6} perf tests}
         \resumeItem{Configured build \& release \textbf{pipelines}, with coverage reporter, static code analyzer, deploying to \textbf{IIS} with \textbf{Azure} agents}
