Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -158,7 +158,7 @@
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
         \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
-        \resumeItem{Enhanced email compose flow, reducing errors by \textbf{30\%}, and migrated the mail view API to \textbf{ES}, cutting latency by \textbf{60\%}}
+        \resumeItem{Overhauled email compose flow, reducing errors by \textbf{25\%}, and migrated the mail list API to \textbf{ES}, cutting latency by \textbf{60\%}}
         % \resumeItem{Outlook mail import job: Hotfix and Permanent fixes to a production issue, Alarms/Alerts}
         % \resumeItem{Auto Trash \& Clear Trash: Shedlock for Crons, Condition builder in jOOQ, Redis Repository, Batch Delete via Paginated query, applicable without ULID}
         % \resumeItem{Onboarding CleverTap CEP for Backend Events: Resilinace4j, Null check before user attribute access}
@@ -166,7 +166,7 @@
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
-        \resumeItem{Migrated \textbf{40 services} from CloudWatch to Last9 with \textbf{OTEL}, achieving \textbf{30\%} cost reduction and better observability}
+        \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Optimized infrastructure by decommissioning \textbf{300M index}, \textbf{2 RDS instances}, 1 EFS, right-sizing ES/RDS clusters}
         \resumeItem{Migrated email mime data from \textbf{RDS to S3}, consolidating email storage architecture and reducing RDS costs by \textbf{30\%}}
         \resumeItem{Re-engineered email information table with nested partitions and deleted \textbf{3B} promotional records from S3 and database}
