--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -166,10 +166,11 @@
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
+        % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
-        \resumeItem{Migrated email mime data from \textbf{RDS to S3}, consolidating email storage architecture and reducing RDS costs by \textbf{30\%}}
+        \resumeItem{Migrated mime data from \textbf{RDS to S3}, halved S3 PUT cost by zip, and reducing RDS costs by \textbf{30\%}, S3 Lifecycle tiers}
         \resumeItem{Re-engineered email information table with nested partitions and deleted \textbf{3B} promotional records from S3 and database}
-        \resumeItem{Optimized infrastructure by decommissioning \textbf{300M index}, \textbf{2 RDS instances}, 1 EFS, right-sizing ES/RDS clusters}
+        \resumeItem{Optimized infra ES Indices to Cold Tiers and configuring ILM, right-sizing ECS, RDS Snapshots to S3 Glacier cost 45\%}
         
       \resumeItemListEnd
 
