Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -168,9 +168,9 @@
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
         % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
-        \resumeItem{Migrated mime data from \textbf{RDS to S3}, halved S3 PUT cost by zip, and reducing RDS costs by \textbf{30\%}, S3 Lifecycle tiers}
-        \resumeItem{Re-engineered email information table with nested partitions and deleted \textbf{3B} promotional records from S3 and database}
-        \resumeItem{Optimized infra ES Indices to Cold Tiers and configuring ILM, right-sizing ECS, RDS Snapshots to S3 Glacier cost 45\%}
+        \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing RDS Storage costs by \textbf{55\%}, \textbf{halved} S3 PUT costs}
+        \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, reducing costs by \textbf{66\%}}
+        \resumeItem{Streamlined infra with ES \textbf{ILM} rollover, \textbf{right-sizing} ECS/RDS clusters, \textbf{S3 Glacier} archival, \textbf{35\%} cut in cloud costs}
         
       \resumeItemListEnd
 
