Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -169,8 +169,8 @@
         % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing Storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
-        \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, yielding \textbf{66\%} cost save}
-        \resumeItem{Streamlined infra with ES \textbf{ILM} rollover, \textbf{right-sizing} ECS/RDS clusters, \textbf{S3 Glacier} archival, resulting \textbf{35\%} cost cut}
+        \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
+        \resumeItem{Streamlined infra with ES \textbf{ILM} rollover, \textbf{right-sizing} ECS/RDS clusters, \textbf{S3 Glacier} archival, yielding \textbf{35\%} cost cuts}
         
       \resumeItemListEnd
 
