--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -170,7 +170,7 @@
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing Storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
         \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
-        \resumeItem{Optimized infra costs with ES \textbf{ILM} rollover, \textbf{right-sizing} ECS/RDS clusters, \textbf{S3 Glacier} archival, yielding \textbf{35\%} cuts}
+        \resumeItem{Optimized infra costs with ES \textbf{ILM} rollover, right-sizing \textbf{ECS/RDS} clusters, \textbf{S3 Glacier} archival, yielding \textbf{35\%} cuts}
         
       \resumeItemListEnd
 
