--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -168,7 +168,7 @@
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
         % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
-        \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing Storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
+        \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
         \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
         \resumeItem{Optimized infra costs with ES \textbf{ILM} rollover, right-sizing \textbf{ECS/RDS} clusters, \textbf{S3 Glacier} archival, yielding \textbf{35\%} cuts}
         
