--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -137,7 +137,7 @@
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, FastAPI, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
