Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -133,11 +133,11 @@
 \begin{flushleft}
 \setlength{\leftskip}{0.2in}
 \small
-\textbf{Programming Languages}{: C++, Java, Golang, JavaScript, TypeScript} \\
+\textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
@@ -170,7 +170,7 @@
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
         \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
-        \resumeItem{Optimized infra costs by right-sizing \textbf{ECS/RDS} cluster, \textbf{S3 Glacier} archival, \textbf{Subnet} restructuring, yielding \textbf{35\%} cut}
+        \resumeItem{Optimized infra costs by right-sizing \textbf{ECS/RDS} cluster, \textbf{S3 Glacier} archival, \textbf{Subnet} restructuring, yielding \textbf{38\%} cut}
         
       \resumeItemListEnd
 
