skills: update programming languages and frameworks

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -133,11 +133,11 @@
 \begin{flushleft}
 \setlength{\leftskip}{0.2in}
 \small
-\textbf{Programming Languages}{: C++, Java, Golang, JavaScript, TypeScript} \\
+\textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
