style: add commented entry for Agentic AI project
- Added commented placeholder for future Agentic AI project achievements with performance metrics
- Includes details about back merge functionality and 16.25% improvement in seller details

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -167,6 +167,7 @@
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
         % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
+        % \resumeItem{Agentic AI: Back merge by productID, Back Merge by URL, Merging across previous runs, 16.25\% improvement in seller details}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
         \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
