style: update company name from FlashMonk to Flash AI

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -154,7 +154,7 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {FlashMonk}{Dec 2024 - Present}
+      {Flash AI}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
         \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
