--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -133,11 +133,11 @@
 \begin{flushleft}
 \setlength{\leftskip}{0.2in}
 \small
-\textbf{Programming Languages}{: C++, Java, Golang, JavaScript, TypeScript} \\
+\textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
@@ -146,6 +146,7 @@
 \textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
 \vspace{1pt}
 \textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, CloudFront, Route53 }
+% Single line for both Deployment and Cloud (DevOps profile)
 \end{flushleft}
  \vspace{-16pt}
 
@@ -154,7 +155,7 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {FlashMonk}{Dec 2024 - Present}
+      {Flash AI}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
         \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
@@ -167,6 +168,7 @@
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Performance: Latency Improvements with Brand V3 Cache: Caching levels, Cache Size estimation, Caching Complex APIs, Multi API caching for response or extracted result, TTL business stale determinations}
         % \resumeItem{Scrapper: NAT Egress cost with Public subnet and peering}
+        % \resumeItem{Agentic AI: Back merge by productID, Back Merge by URL, Merging across previous runs, 16.25\% improvement in seller details}
         \resumeItem{Enhanced observability incorporating \textbf{OTEL} across \textbf{28} services, transitioning from CW to Last9, reducing costs by \textbf{30\%}}
         \resumeItem{Migrated mime data from RDS to S3 with \textbf{Lifecycle} policy, reducing storage costs by \textbf{55\%}, and \textbf{halved} S3 write costs}
         \resumeItem{Re-engineered email table with \textbf{nested partitions}, deleted \textbf{2B} promotional mails from S3/DB, resulting \textbf{66\%} cost save}
