Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -137,7 +137,8 @@
 \vspace{1pt}
 % \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph} \\
+% \textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
