Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -133,6 +133,7 @@
 \begin{flushleft}
 \setlength{\leftskip}{0.2in}
 \small
+% Languages & Frameworks: To be targetted precisely (too many loses depth!)
 \textbf{Programming Languages}{: Java, Golang, Python, C++, JavaScript, TypeScript, SQL} \\
 \vspace{1pt}
 % \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
@@ -158,6 +159,7 @@
       {Flash AI}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
+       % Bar Raiser: Metrics, Numbers, Optimisations, Distributed Systems and Rock Solid Features (Non Infra/Cloud)
         \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
         \resumeItem{Overhauled email compose flow, reducing errors by \textbf{25\%}, and migrated the mail list API to \textbf{ES}, cutting latency by \textbf{60\%}}
         % \resumeItem{Outlook mail import job: Hotfix and Permanent fixes to a production issue, Alarms/Alerts}
