--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -139,7 +139,7 @@
 % \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
 \textbf{Frameworks}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph} \\
-% \textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, Mongoose, Prisma, Gorm} \\
+% \textbf{Frameworks \& ORMs}{: Spring Boot, FastAPI, Gin, Express.js, LangGraph, jOOQ, SQLAlchemy, Alembic, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
