--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -146,7 +146,7 @@
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
 \vspace{1pt}
 % \textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
-\textbf{Infrastructure}{: Docker, GitHub Actions, Last9, AWS (S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CW, SNS, SQS)} \\
+\textbf{Infrastructure}{: Docker, GitHub Actions, Last9, AWS (S3, EC2, ECS, ALB, Lambda, RDS, ElastiCache, CW, SNS, SQS)} \\
 % \textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, CloudFront, Route53 }
 \end{flushleft}
  \vspace{-16pt}
