Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -133,7 +133,7 @@
 \begin{flushleft}
 \setlength{\leftskip}{0.2in}
 \small
-% Languages & Frameworks: To be targetted precisely (too many loses depth!)
+% Languages & Frameworks: To be targetted precisely (RED FLAG!)
 \textbf{Programming Languages}{: Java, Golang, Python, C++, JavaScript, TypeScript, SQL} \\
 \vspace{1pt}
 % \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
