Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -186,7 +186,8 @@
 \vspace{1pt}
 % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
 % \vspace{1pt}
-\textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
+% \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
+\textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, PostgreSQL, pgvector} \\
 \vspace{1pt}
 % \textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
 \textbf{Infrastructure}{: Docker, Azure DevOps, Last9, AWS (S3, EC2, ECS, ALB, Lambda, RDS, ElastiCache, CW, SNS, SQS)} \\
