Updates from Overleaf

--- a/snapshots/v0.tex
+++ b/snapshots/v0.tex
@@ -110,7 +110,8 @@
       {Flash AI}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
-       % Explain context, business impact, put hardcore numbers $150K
+       % No body knows what Flash is/does, context is even more important here
+       % Business impact, put hardcore numbers $150K
        % Bar Raiser: Metrics, Numbers, Optimisations, Distributed Systems and Rock Solid Features (Non Infra/Cloud)
         \resumeItem{Redesigned \textbf{IMAP} service, decoupling mail fetch events, auto-retry, configurable domains, improved wait times by \textbf{76\%}}
         \resumeItem{Overhauled email compose flow, reducing errors by \textbf{25\%}, and migrated the mail list API to \textbf{ES}, cutting latency by \textbf{60\%}}
